// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`api events when user is "admin" should subscribe shoots for a single cluster 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "name": "fooShoot",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "admin" should subscribe shoots for a single cluster 2`] = `
Array [
  Object {
    "metadata": Object {
      "annotations": Object {
        "gardener.cloud/created-by": "foo@example.org",
      },
      "name": "fooShoot",
      "namespace": "garden-foo",
      "uid": 1,
    },
    "spec": Object {
      "cloudProfileName": "infra1-profileName",
      "hibernation": Object {
        "enabled": false,
      },
      "kubernetes": Object {
        "version": "1.16.0",
      },
      "provider": Object {
        "type": "fooInfra",
      },
      "purpose": "fooPurpose",
      "region": "foo-west",
      "secretBindingName": "foo-infra1",
      "seedName": "infra1-seed",
    },
    "status": Object {
      "advertisedAddresses": Array [
        Object {
          "name": "external",
          "url": "https://api.fooShoot.foo.shoot.test",
        },
      ],
      "technicalID": "shoot--foo--fooShoot",
    },
  },
  Object {
    "apiVersion": "v1",
    "code": 404,
    "details": Object {
      "group": "core.gardener.cloud",
      "kind": "shoots",
      "uid": 2,
    },
    "kind": "Status",
    "message": "Shoot with uid 2 does not exist",
    "reason": "NotFound",
    "status": "Failure",
  },
]
`;

exports[`api events when user is "admin" should subscribe shoots for a single namespace 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "admin" should subscribe shoots for a single namespace 2`] = `
Array [
  Object {
    "metadata": Object {
      "annotations": Object {
        "gardener.cloud/created-by": "foo@example.org",
      },
      "name": "fooShoot",
      "namespace": "garden-foo",
      "uid": 1,
    },
    "spec": Object {
      "cloudProfileName": "infra1-profileName",
      "hibernation": Object {
        "enabled": false,
      },
      "kubernetes": Object {
        "version": "1.16.0",
      },
      "provider": Object {
        "type": "fooInfra",
      },
      "purpose": "fooPurpose",
      "region": "foo-west",
      "secretBindingName": "foo-infra1",
      "seedName": "infra1-seed",
    },
    "status": Object {
      "advertisedAddresses": Array [
        Object {
          "name": "external",
          "url": "https://api.fooShoot.foo.shoot.test",
        },
      ],
      "technicalID": "shoot--foo--fooShoot",
    },
  },
  Object {
    "apiVersion": "v1",
    "code": 404,
    "details": Object {
      "group": "core.gardener.cloud",
      "kind": "shoots",
      "uid": 4,
    },
    "kind": "Status",
    "message": "Shoot with uid 4 does not exist",
    "reason": "NotFound",
    "status": "Failure",
  },
]
`;

exports[`api events when user is "admin" should subscribe shoots for all namespace 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "admin" should subscribe shoots for all namespace 2`] = `
Array [
  Object {
    "metadata": Object {
      "annotations": Object {
        "gardener.cloud/created-by": "foo@example.org",
      },
      "name": "fooShoot",
      "namespace": "garden-foo",
      "uid": 1,
    },
    "spec": Object {
      "cloudProfileName": "infra1-profileName",
      "hibernation": Object {
        "enabled": false,
      },
      "kubernetes": Object {
        "version": "1.16.0",
      },
      "provider": Object {
        "type": "fooInfra",
      },
      "purpose": "fooPurpose",
      "region": "foo-west",
      "secretBindingName": "foo-infra1",
      "seedName": "infra1-seed",
    },
    "status": Object {
      "advertisedAddresses": Array [
        Object {
          "name": "external",
          "url": "https://api.fooShoot.foo.shoot.test",
        },
      ],
      "technicalID": "shoot--foo--fooShoot",
    },
  },
  Object {
    "metadata": Object {
      "annotations": Object {
        "gardener.cloud/created-by": "admin@example.org",
      },
      "name": "infra1-seed",
      "namespace": "garden",
      "uid": 4,
    },
    "spec": Object {
      "cloudProfileName": "infra1-profileName",
      "hibernation": Object {
        "enabled": false,
      },
      "kubernetes": Object {
        "version": "1.16.0",
      },
      "provider": Object {
        "type": "fooInfra",
      },
      "purpose": "foo-purpose",
      "region": "foo-west",
      "secretBindingName": "soil-infra1",
      "seedName": "soil-infra1",
    },
    "status": Object {
      "advertisedAddresses": Array [
        Object {
          "name": "external",
          "url": "https://api.infra1-seed.garden.shoot.test",
        },
      ],
      "technicalID": "shoot--garden--infra1-seed",
    },
  },
]
`;

exports[`api events when user is "admin" should subscribe unhealthy shoots for all namespace 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImFkbWluQGV4YW1wbGUub3JnIiwiaWF0IjoxNTc3ODM2ODAwLCJhdWQiOlsiZ2FyZGVuZXIiXSwiZXhwIjozMTU1NzE2ODAwLCJqdGkiOiJqdGkifQ.PwFHRt9M8dJf8YcCVlbyH4xu2QpL3jBI1oEC_Zdmtzk",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "foo" should subscribe shoots for a single cluster 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "name": "fooShoot",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "get",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "foo" should subscribe shoots for a single namespace 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "foo" should subscribe shoots for all namespace 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-bar",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;

exports[`api events when user is "foo" should subscribe unhealthy shoots for all namespace 1`] = `
Array [
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "",
          "resource": "secrets",
          "verb": "get",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-foo",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
  Array [
    Object {
      ":authority": "kubernetes:6443",
      ":method": "post",
      ":path": "/apis/authorization.k8s.io/v1/selfsubjectaccessreviews",
      ":scheme": "https",
      "authorization": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImZvb0BleGFtcGxlLm9yZyIsImlhdCI6MTU3NzgzNjgwMCwiYXVkIjpbImdhcmRlbmVyIl0sImV4cCI6MzE1NTcxNjgwMCwianRpIjoianRpIn0.k3kGjF6AgugJLdwERXEWZPaibFAPFPOnmpT3YM9H0xU",
    },
    Object {
      "apiVersion": "authorization.k8s.io/v1",
      "kind": "SelfSubjectAccessReview",
      "spec": Object {
        "nonResourceAttributes": undefined,
        "resourceAttributes": Object {
          "group": "core.gardener.cloud",
          "namespace": "garden-bar",
          "resource": "shoots",
          "verb": "list",
        },
      },
    },
  ],
]
`;
